--- a/src/app/compte/compte.component.html
+++ b/src/app/compte/compte.component.html
@@ -2,6 +2,8 @@
 	<app-header></app-header>
   </header>
   
+  <navbar></navbar>
+  
 <h2>mon compte</h2>
 
 <table class="table table-hover table-striped">
