--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,24 +1,25 @@
 <header>
 	<app-header></app-header>
-  </header>
+</header>
   
-  <navbar></navbar>
+<navbar></navbar>
+
 	<div class="row">
-		<div class="col-lg-2 col-md-6" id="filtres">
+		<div class="col-lg-2" id="filtres">
 			<h1 class="my-4">Filtres</h1>
 			<form>
 				<div class="list-group">
-					<input type="text" class="form-control list-group-item" placeholder="Titre" [(ngModel)]="filtresMultiplesVM.titre" id="titre" name="Titre">
+					<input type="text" class="form-control list-group-item" placeholder="Titre" [(ngModel)]="filtresMultiplesVM.titre" id="titre" name="Titre" >
 						<label class="form-check-label list-group-item" for="admin"><input type="checkbox" class="form-check-input" [(ngModel)]="filtresMultiplesVM.recommande" name="administrateur" id="admin">
 						Recommandé</label>
-					<div class="list-group-item" style="float:left;  font-size:1.1em; overflow:auto; ">
-						<div class="form-check" id="listAuthors"><label for="listAuthors">Auteurs :</label></div>
+					<div class="list-group-item" style="float:left;  font-size:1.1em; overflow-y:auto; max-height: 250px; ">
+						<div class="form-check" id="listAuthors" ><label for="listAuthors">Auteurs :</label></div>
 						<label *ngFor="let author of listeAuthor" class="list-group-item">
 							<input type="checkbox" class="form-check-input" type="checkbox" name="selection" [(checklist)]="filtresMultiplesVM.authorIds" [checklistValue]="author.authorId"/>
 								{{author.authorFirstname}} {{author.authorLastname}}
 						</label>
 					</div>
-					<div class="list-group-item" style="float:left;  font-size:1.1em; overflow:auto;">
+					<div class="list-group-item" style="float:left;  font-size:1.1em; overflow-y:auto; max-height: 250px; ">
 						<div class="form-check" id="listEditors"><label for="listEditors">Editeurs :</label>
 						</div>
 						<label *ngFor="let editor of listeEditor" class="list-group-item">
@@ -26,7 +27,7 @@
 						{{editor.name}}
 					</label>
 					</div>
-					<div class="list-group-item" style="float:left;  font-size:1.1em; overflow:auto;">
+					<div class="list-group-item" style="float:left;  font-size:1.1em; overflow-y:auto;  max-height: 250px; ">
 						<div class="form-check" id="listCategory"><label for="listCategory">Catégories :</label>
 						</div>
 						<label *ngFor="let category of listeCategory" class="list-group-item">
@@ -38,13 +39,12 @@
 				</div>
 			</form>
 		</div>
-	</div>
-	<div class="row">
-		<div class="col-lg-10">
+
+		<div class="col-lg-9">
 			<div *ngFor="let book of listeBooks" class="col-lg-3 col-md-6 mb-4" style="height:500px;" id="book" >
 					<div class="card h-100" >
-						<a href="http://localhost:8080/GestionBiblio/book/image/?imagePath={{book.imagePath}}"><img style="max-width: 150px; height: auto;" src="http://localhost:8080/GestionBiblio/book/image/?imagePath={{book.imagePath}}"/></a>
-					<div class="card-body">
+						<a href="{{URL}}{{book.imagePath}}"><img style="max-width: 150px; height: auto;" src="{{URL}}{{book.imagePath}}"/></a>
+					<div class="card-body" style="overflow-y:auto; max-height: 500px;">
 						<h4 class="card-title"><a href="#">{{book.bookTitre}}</a></h4>
 						<h5>{{book.bookPrice}}<i class="Eglyphicon glyphicon-euro"></i></h5> 
 						<p class="card-text">{{book.bookDescription}}</p>
@@ -61,3 +61,4 @@
 			</div>
 		</div>
 	</div>
+<br><br><br><br>
