--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -1,3 +1,9 @@
+<header>
+	<app-header></app-header>
+  </header>
+  
+  <navbar></navbar>
+
 <div class="container">
     <div class="panel panel-primary">
         <div class="panel-body">
@@ -15,11 +21,11 @@
                     </thead>
                     <tbody id="contenant">
                         <tr *ngFor="let bookBasketFull of bookBasketFulls">
-                            <td><img style="max-width: 100px; height: auto;" src="http://localhost:8080/GestionBiblio/book/image/?imagePath={{bookBasketFull.imagePath}}"/></td>
+                            <td><img style="max-width: 100px; height: auto;" src="{{BASE_URL}}/book/image/?imagePath={{bookBasketFull.imagePath}}"/></td>
                             <td style="vertical-align: middle;">{{bookBasketFull.bookTitre}}</td>
                             <td style="vertical-align: middle;">{{bookBasketFull.bookPrice}}<i class="Eglyphicon glyphicon-euro"></i></td>
                             <td style="vertical-align: middle;">
-                                <span *ngFor="let author of bookBasketFull.authorIds">{{author}} |</span>
+                                <span *ngFor="let author of bookBasketFull.authors">{{author.authorLastname}} {{author.authorFirstname}}|</span>
                             </td>
                             <td style="vertical-align: middle;">{{bookBasketFull.editor.editorName}}</td>
                             <td style="vertical-align: middle;">
@@ -32,3 +38,5 @@
         </div>
     </div>
 </div>
+
+<br><br>
